[package]
name = "myaleo"
version = "0.10.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Console environment for a decentralized virtual machine"
license = "GPL-3.0"
edition = "2021"

[[bin]]
name = "myaleo"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
rand_chacha = "0.3.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
snarkvm-console = "0.9.11"
